<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowback"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:scaleType="fitXY"
            android:backgroundTintMode="screen"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="28dp"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_mediummm"
            android:textColor="@color/grey"
            android:text="@string/plants_name" />

        <LinearLayout
            android:layout_below="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/RoundedRectangle"
                android:src="@mipmap/ic_launcher"  />

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingMultiplier="1.25"
                android:fontFamily="@font/montserrat_mediummm"
                android:text="@string/plants_detail"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:fontFamily="@font/trebuchet_ms"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginBottom="24dp"
                android:lineSpacingMultiplier="1.25"
                android:fontFamily="@font/trebuchet_ms"
                android:text="@string/plants_description"
                android:justificationMode="inter_word"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <LinearLayout
                    android:id="@+id/table_one"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/grey"
                                android:textSize="16sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:textStyle="bold"
                                android:text="@string/water" />


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_item_info_water"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="14sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:text="@string/plants_info_water"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/grey"
                                android:textSize="16sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:textStyle="bold"
                                android:text="@string/temperature" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_item_info_temperature"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="14sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:text="@string/plants_info_temperature" />


                        </TableRow>


                    </TableLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/table_one"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:textStyle="bold"
                                android:text="@string/illumination"
                                android:textColor="@color/grey" />


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_item_info_illumination"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="14sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:text="@string/plants_info_illumination"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/grey"
                                android:textSize="16sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:textStyle="bold"
                                android:text="@string/fertilizer" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_item_info_fertilizer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="14sp"
                                android:fontFamily="@font/trebuchet_ms"
                                android:text="@string/plants_info_fertilizer" />

                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>