<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp">

            <ImageButton
                android:id="@+id/imgbtn_back_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowback"
                android:backgroundTintMode="screen"
                app:tint="@color/green" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/aboutlogo"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/plantist_about"
            android:textColor="@color/grey"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/version"
            android:textColor="@color/grey"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_mediummm"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/copyright"
            android:textColor="@color/grey"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Thank You!"
            android:layout_marginBottom="24dp"
            android:textColor="@color/grey"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center" />


    </LinearLayout>


</ScrollView>